--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -1,16 +1,28 @@
-name: WakaTime Readme
+name: Waka Readme
 
 on:
   push:
     branches:
       - master
+  workflow_dispatch:
   schedule:
-    - cron: "0 19 * * *"
+    # Runs at 12am UTC
+    - cron: '0 0 * * *'
 
 jobs:
   update-readme:
+    name: 更新wakatime README
     runs-on: ubuntu-latest
     steps:
-      - uses: athul/waka-readme@master
+#       - uses: athul/waka-readme@master
+#         with:
+#           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+# #           GH_TOKEN: ${{ secrets.GH_TOKEN}}
+#           USERNAME: eternidad33
+#           SHOW_TITLE: true
+      - uses: eternidad33/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          SHOW_EDITORS: true
+          SHOW_OS: true
