--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,5 @@
-
 name: Waka Readme
- 
+
 on:
   push:
     branches:
@@ -9,7 +8,7 @@ on:
   schedule:
     # Runs at 12am UTC
     - cron: '0 0 * * *'
- 
+
 jobs:
   update-readme:
     name: Update this repo's README 
@@ -18,3 +17,5 @@ jobs:
       - uses: lm101845/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          SHOW_TITLE: true
+          HEAD_FLAG: true
