--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,20 @@
 name: Waka Readme
-
+ 
 on:
-  schedule:
-    # Runs at 12am IST
-    - cron: '30 18 * * *'
+  push:
+    branches:
+      - master
   workflow_dispatch:
+  schedule:
+    # Runs at 12am UTC
+    - cron: '0 0 * * *'
+ 
 jobs:
   update-readme:
-    name: Update Readme with Metrics
+    name: Update this repo's README 
     runs-on: ubuntu-latest
     steps:
-      - uses: lm101845/waka-readme-stats@master
+      - uses: lm101845/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          GIST_ID: https://gist.github.com/lm101845/9faad31725dbc4150f728683a4e852c6
 
